# code-uni-1

algoritma-dan-pemrograman/week11/: hangman.cpp
analisis-algoritma/quick-sort/: pseudocode.txt
analisis-algoritma/sudoku-solver-cpp/: playground.cpp  pseudocode.txt  sudoku-solver-1.cpp  sudoku-solver-2.cpp
analisis-algoritma/sudoku-solver-js/: index.js  utils.js
fisika/: automatic-watering-plant-arduino.ino
kriptografi/cipher-app-1/: README.md  pyproject.toml
kriptografi/cipher-app-1/app/: main.py
kriptografi/cipher-app-1/app/api/: routes.py
kriptografi/cipher-app-1/app/cipher_algorithms/: __init__.py  base_class.py  hill.py  playfair.py  vigenere.py
kriptografi/cipher-app-1/app/gui/: index.html  script.js  style.css
kriptografi/tugas-akhir/: contoh_input_sbox.xlsx  main.py
statistika/: kaggle-machine-learning-house-competitions.ipynb  machine-learning-house-competitions-version-2.ipynb:Zone.Identifier
statistika/final-project/: link-to-kaggle-submission.md
struktur-data/03-linked-list/: struct.cpp
struktur-data/04-double-linked-list/: book.cpp
struktur-data/12-tree/: tranversal.cpp
struktur-data/ta/: tes.cpp
struktur-data/week-02/: praktikum1.cpp
struktur-data/week-03/: fromaic.c
struktur-data/week-04/: doublelinkedlist.cpp
struktur-data/week-10/: quick-sort.cpp  sort.cpp
struktur-data/week-13/: tree.cpp
struktur-data/week02/: pointer.cpp
struktur-data/week04/: cars.cpp
struktur-data/week06/: shift.cpp
struktur-data/week10/: merge-sort.cpp
struktur-data/week2/: latihan.cpp
struktur-data/week3/: fromai.cpp  tes.cpp  (+1 more)
(+9 files in other folders)
