[project]
name = "cipher-app-1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Almaas Izdihar", email = "almaasizdihar@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "numpy>=2.1.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
